# HealthTrackerApp

./: .firebaserc  App.tsx  README.md  app.json  cli-backup.js  firebase.json  firestore.rules  index.js  key.properties  package-lock.json  package.json
android/: gradle.properties  settings.gradle
android/app/: build.gradle  google-services.json
android/app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  MainApplicationModuleProvider.cpp  MainApplicationModuleProvider.h  MainComponentsRegistry.cpp  MainComponentsRegistry.h
ios/: Podfile
ios/HealthTracker/: AppDelegate.swift  GoogleService-Info.plist  Info.plist
ios/HealthTracker.xcodeproj/: project.pbxproj
src/components/: BackButton.tsx  Button.tsx  CustomLineChart.tsx  EmailVerificationBanner.tsx  GoalSettingModal.tsx  HealthChart.tsx  ImagePickerButton.js  Input.tsx  MetricCard.tsx  ScreenHeader.tsx  ThemedStatusBar.tsx  ToastManager.tsx  ToastNotification.tsx
src/constants/: index.ts  theme.ts
src/contexts/: BluetoothContext.tsx  ThemeContext.tsx
src/navigation/: AppNavigator.tsx  TabBar.tsx
src/screens/: AboutAppScreen.tsx  ActivityScreen.tsx  CyclingScreen.tsx  DeviceConnect.tsx  DeviceConnectScreen.tsx  EmergencyContactsScreen.tsx  ForgotPasswordScreen.tsx  HealthDetailsScreen.tsx  HeartRateScreen.tsx  HomeScreen.tsx  LoginScreen.tsx  NotificationsScreen.tsx  PrivacyPolicyScreen.tsx  ProfileScreen.tsx  RegisterScreen.tsx  SecurityScreen.tsx  SettingsScreen.tsx  SleepScreen.tsx  StatsScreen.tsx  StepsScreen.tsx  TwoFactorAuthScreen.tsx
src/services/: bluetooth.ts  firebase.ts  (+4 more)
(+29 files in other folders)
